src/g4/SysY2022EParser.ts
// Generated from SysY2022E.g4 by ANTLR 4.13.1
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import SysY2022EListener from "./SysY2022EListener.js";
import SysY2022EVisitor from "./SysY2022EVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class SysY2022EParser extends Parser {
	public static readonly INT = 1;
	public static readonly FLOAT = 2;
	public static readonly VOID = 3;
	public static readonly CONST = 4;
	public static readonly RETURN = 5;
	public static readonly IF = 6;
	public static readonly ELSE = 7;
	public static readonly WHILE = 8;
	public static readonly BREAK = 9;
	public static readonly CONTINUE = 10;
	public static readonly FOR = 11;
	public static readonly STRUCT = 12;
	public static readonly LP = 13;
	public static readonly RP = 14;
	public static readonly LB = 15;
	public static readonly RB = 16;
	public static readonly LC = 17;
	public static readonly RC = 18;
	public static readonly COMMA = 19;
	public static readonly SEMICOLON = 20;
	public static readonly QUESTION = 21;
	public static readonly COLON = 22;
	public static readonly MINUS = 23;
	public static readonly NOT = 24;
	public static readonly ASSIGN = 25;
	public static readonly ADD = 26;
	public static readonly MUL = 27;
	public static readonly DIV = 28;
	public static readonly MOD = 29;
	public static readonly AND = 30;
	public static readonly OR = 31;
	public static readonly EQ = 32;
	public static readonly NEQ = 33;
	public static readonly LT = 34;
	public static readonly LE = 35;
	public static readonly GT = 36;
	public static readonly GE = 37;
	public static readonly LAMBDA = 38;
	public static readonly POINT = 39;
	public static readonly DOT = 40;
	public static readonly INT_LIT = 41;
	public static readonly FLOAT_LIT = 42;
	public static readonly ID = 43;
	public static readonly STRUCTNAME = 44;
	public static readonly STRING = 45;
	public static readonly WS = 46;
	public static readonly LINE_COMMENT = 47;
	public static readonly BLOCK_COMMENT = 48;
	public static readonly EOF = Token.EOF;
	public static readonly RULE_compUnit = 0;
	public static readonly RULE_decl = 1;
	public static readonly RULE_constDecl = 2;
	public static readonly RULE_bType = 3;
	public static readonly RULE_constDef = 4;
	public static readonly RULE_constInitVal = 5;
	public static readonly RULE_structDecl = 6;
	public static readonly RULE_lambdaType = 7;
	public static readonly RULE_varDecl = 8;
	public static readonly RULE_varDef = 9;
	public static readonly RULE_initVal = 10;
	public static readonly RULE_funcDef = 11;
	public static readonly RULE_funcType = 12;
	public static readonly RULE_funcFParams = 13;
	public static readonly RULE_funcFParam = 14;
	public static readonly RULE_block = 15;
	public static readonly RULE_blockItem = 16;
	public static readonly RULE_stmt = 17;
	public static readonly RULE_exp = 18;
	public static readonly RULE_cond = 19;
	public static readonly RULE_lVal = 20;
	public static readonly RULE_primaryExp = 21;
	public static readonly RULE_lambdaExp = 22;
	public static readonly RULE_number = 23;
	public static readonly RULE_unaryExp = 24;
	public static readonly RULE_unaryOp = 25;
	public static readonly RULE_funcRParams = 26;
	public static readonly RULE_funcRParam = 27;
	public static readonly RULE_mulExp = 28;
	public static readonly RULE_addExp = 29;
	public static readonly RULE_relExp = 30;
	public static readonly RULE_eqExp = 31;
	public static readonly RULE_lAndExp = 32;
	public static readonly RULE_lOrExp = 33;
	public static readonly RULE_constExp = 34;
	public static readonly literalNames: (string | null)[] = [ null, "'int'", 
                                                            "'float'", "'void'", 
                                                            "'const'", "'return'", 
                                                            "'if'", "'else'", 
                                                            "'while'", "'break'", 
                                                            "'continue'", 
                                                            "'for'", "'struct'", 
                                                            "'('", "')'", 
                                                            "'['", "']'", 
                                                            "'{'", "'}'", 
                                                            "','", "';'", 
                                                            "'?'", "':'", 
                                                            "'-'", "'!'", 
                                                            "'='", "'+'", 
                                                            "'*'", "'/'", 
                                                            "'%'", "'&&'", 
                                                            "'||'", "'=='", 
                                                            "'!='", "'<'", 
                                                            "'<='", "'>'", 
                                                            "'>='", "'^'", 
                                                            "'.'", "'->'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, "INT", 
                                                             "FLOAT", "VOID", 
                                                             "CONST", "RETURN", 
                                                             "IF", "ELSE", 
                                                             "WHILE", "BREAK", 
                                                             "CONTINUE", 
                                                             "FOR", "STRUCT", 
                                                             "LP", "RP", 
                                                             "LB", "RB", 
                                                             "LC", "RC", 
                                                             "COMMA", "SEMICOLON", 
                                                             "QUESTION", 
                                                             "COLON", "MINUS", 
                                                             "NOT", "ASSIGN", 
                                                             "ADD", "MUL", 
                                                             "DIV", "MOD", 
                                                             "AND", "OR", 
                                                             "EQ", "NEQ", 
                                                             "LT", "LE", 
                                                             "GT", "GE", 
                                                             "LAMBDA", "POINT", 
                                                             "DOT", "INT_LIT", 
                                                             "FLOAT_LIT", 
                                                             "ID", "STRUCTNAME", 
                                                             "STRING", "WS", 
                                                             "LINE_COMMENT", 
                                                             "BLOCK_COMMENT" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"compUnit", "decl", "constDecl", "bType", "constDef", "constInitVal", 
		"structDecl", "lambdaType", "varDecl", "varDef", "initVal", "funcDef", 
		"funcType", "funcFParams", "funcFParam", "block", "blockItem", "stmt", 
		"exp", "cond", "lVal", "primaryExp", "lambdaExp", "number", "unaryExp", 
		"unaryOp", "funcRParams", "funcRParam", "mulExp", "addExp", "relExp", 
		"eqExp", "lAndExp", "lOrExp", "constExp",
	];
	public get grammarFileName(): string { return "SysY2022E.g4"; }
	public get literalNames(): (string | null)[] { return SysY2022EParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return SysY2022EParser.symbolicNames; }
	public get ruleNames(): string[] { return SysY2022EParser.ruleNames; }
	public get serializedATN(): number[] { return SysY2022EParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, SysY2022EParser._ATN, SysY2022EParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public compUnit(): CompUnitContext {
		let localctx: CompUnitContext = new CompUnitContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, SysY2022EParser.RULE_compUnit);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 74;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 12318) !== 0) || _la===44) {
				{
				this.state = 72;
				this._errHandler.sync(this);
				switch ( this._interp.adaptivePredict(this._input, 0, this._ctx) ) {
				case 1:
					{
					this.state = 70;
					this.decl();
					}
					break;
				case 2:
					{
					this.state = 71;
					this.funcDef();
					}
					break;
				}
				}
				this.state = 76;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 77;
			this.match(SysY2022EParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public decl(): DeclContext {
		let localctx: DeclContext = new DeclContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, SysY2022EParser.RULE_decl);
		try {
			this.state = 82;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 4:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 79;
				this.constDecl();
				}
				break;
			case 1:
			case 2:
			case 13:
			case 44:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 80;
				this.varDecl();
				}
				break;
			case 12:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 81;
				this.structDecl();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public constDecl(): ConstDeclContext {
		let localctx: ConstDeclContext = new ConstDeclContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, SysY2022EParser.RULE_constDecl);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 84;
			this.match(SysY2022EParser.CONST);
			this.state = 85;
			this.bType();
			this.state = 86;
			this.constDef();
			this.state = 91;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===19) {
				{
				{
				this.state = 87;
				this.match(SysY2022EParser.COMMA);
				this.state = 88;
				this.constDef();
				}
				}
				this.state = 93;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 94;
			this.match(SysY2022EParser.SEMICOLON);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public bType(): BTypeContext {
		let localctx: BTypeContext = new BTypeContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, SysY2022EParser.RULE_bType);
		try {
			this.state = 100;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 96;
				this.match(SysY2022EParser.INT);
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 97;
				this.match(SysY2022EParser.FLOAT);
				}
				break;
			case 44:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 98;
				this.match(SysY2022EParser.STRUCTNAME);
				}
				break;
			case 13:
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 99;
				this.lambdaType();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public constDef(): ConstDefContext {
		let localctx: ConstDefContext = new ConstDefContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, SysY2022EParser.RULE_constDef);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 102;
			this.match(SysY2022EParser.ID);
			this.state = 109;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===15) {
				{
				{
				this.state = 103;
				this.match(SysY2022EParser.LB);
				this.state = 104;
				this.constExp();
				this.state = 105;
				this.match(SysY2022EParser.RB);
				}
				}
				this.state = 111;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 112;
			this.match(SysY2022EParser.ASSIGN);
			this.state = 113;
			this.constInitVal();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public constInitVal(): ConstInitValContext {
		let localctx: ConstInitValContext = new ConstInitValContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, SysY2022EParser.RULE_constInitVal);
		let _la: number;
		try {
			this.state = 128;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 13:
			case 23:
			case 24:
			case 26:
			case 38:
			case 41:
			case 42:
			case 43:
				localctx = new ScalarConstInitValContext(this, localctx);
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 115;
				this.constExp();
				}
				break;
			case 17:
				localctx = new ListConstInitValContext(this, localctx);
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 116;
				this.match(SysY2022EParser.LC);
				this.state = 125;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (((((_la - 13)) & ~0x1F) === 0 && ((1 << (_la - 13)) & 1912613905) !== 0)) {
					{
					this.state = 117;
					this.constInitVal();
					this.state = 122;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					while (_la===19) {
						{
						{
						this.state = 118;
						this.match(SysY2022EParser.COMMA);
						this.state = 119;
						this.constInitVal();
						}
						}
						this.state = 124;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
					}
					}
				}

				this.state = 127;
				this.match(SysY2022EParser.RC);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public structDecl(): StructDeclContext {
		let localctx: StructDeclContext = new StructDeclContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, SysY2022EParser.RULE_structDecl);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 130;
			this.match(SysY2022EParser.STRUCT);
			this.state = 131;
			this.match(SysY2022EParser.STRUCTNAME);
			this.state = 132;
			this.match(SysY2022EParser.LC);
			this.state = 133;
			this.bType();
			this.state = 134;
			this.varDef();
			this.state = 141;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===19) {
				{
				{
				this.state = 135;
				this.match(SysY2022EParser.COMMA);
				this.state = 136;
				this.bType();
				this.state = 137;
				this.varDef();
				}
				}
				this.state = 143;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 144;
			this.match(SysY2022EParser.RC);
			this.state = 145;
			this.match(SysY2022EParser.SEMICOLON);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public lambdaType(): LambdaTypeContext {
		let localctx: LambdaTypeContext = new LambdaTypeContext(this, this._ctx, this.state);
		this.enterRule(localctx, 14, SysY2022EParser.RULE_lambdaType);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 147;
			this.match(SysY2022EParser.LP);
			this.state = 148;
			this.bType();
			this.state = 153;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===19) {
				{
				{
				this.state = 149;
				this.match(SysY2022EParser.COMMA);
				this.state = 150;
				this.bType();
				}
				}
				this.state = 155;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 156;
			this.match(SysY2022EParser.RP);
			this.state = 157;
			this.match(SysY2022EParser.DOT);
			this.state = 158;
			this.bType();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public varDecl(): VarDeclContext {
		let localctx: VarDeclContext = new VarDeclContext(this, this._ctx, this.state);
		this.enterRule(localctx, 16, SysY2022EParser.RULE_varDecl);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 160;
			this.bType();
			this.state = 161;
			this.varDef();
			this.state = 166;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===19) {
				{
				{
				this.state = 162;
				this.match(SysY2022EParser.COMMA);
				this.state = 163;
				this.varDef();
				}
				}
				this.state = 168;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 169;
			this.match(SysY2022EParser.SEMICOLON);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public varDef(): VarDefContext {
		let localctx: VarDefContext = new VarDefContext(this, this._ctx, this.state);
		this.enterRule(localctx, 18, SysY2022EParser.RULE_varDef);
		let _la: number;
		try {
			this.state = 193;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 14, this._ctx) ) {
			case 1:
				localctx = new UninitVarDefContext(this, localctx);
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 171;
				this.match(SysY2022EParser.ID);
				this.state = 178;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===15) {
					{
					{
					this.state = 172;
					this.match(SysY2022EParser.LB);
					this.state = 173;
					this.constExp();
					this.state = 174;
					this.match(SysY2022EParser.RB);
					}
					}
					this.state = 180;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
				break;
			case 2:
				localctx = new InitVarDefContext(this, localctx);
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 181;
				this.match(SysY2022EParser.ID);
				this.state = 188;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===15) {
					{
					{
					this.state = 182;
					this.match(SysY2022EParser.LB);
					this.state = 183;
					this.constExp();
					this.state = 184;
					this.match(SysY2022EParser.RB);
					}
					}
					this.state = 190;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 191;
				this.match(SysY2022EParser.ASSIGN);
				this.state = 192;
				this.initVal();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public initVal(): InitValContext {
		let localctx: InitValContext = new InitValContext(this, this._ctx, this.state);
		this.enterRule(localctx, 20, SysY2022EParser.RULE_initVal);
		let _la: number;
		try {
			this.state = 208;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 13:
			case 23:
			case 24:
			case 26:
			case 38:
			case 41:
			case 42:
			case 43:
				localctx = new ScalarInitValContext(this, localctx);
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 195;
				this.exp();
				}
				break;
			case 17:
				localctx = new ListInitvalContext(this, localctx);
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 196;
				this.match(SysY2022EParser.LC);
				this.state = 205;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (((((_la - 13)) & ~0x1F) === 0 && ((1 << (_la - 13)) & 1912613905) !== 0)) {
					{
					this.state = 197;
					this.initVal();
					this.state = 202;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					while (_la===19) {
						{
						{
						this.state = 198;
						this.match(SysY2022EParser.COMMA);
						this.state = 199;
						this.initVal();
						}
						}
						this.state = 204;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
					}
					}
				}

				this.state = 207;
				this.match(SysY2022EParser.RC);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public funcDef(): FuncDefContext {
		let localctx: FuncDefContext = new FuncDefContext(this, this._ctx, this.state);
		this.enterRule(localctx, 22, SysY2022EParser.RULE_funcDef);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 210;
			this.funcType();
			this.state = 211;
			this.match(SysY2022EParser.ID);
			this.state = 212;
			this.match(SysY2022EParser.LP);
			this.state = 214;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 8198) !== 0) || _la===44) {
				{
				this.state = 213;
				this.funcFParams();
				}
			}

			this.state = 216;
			this.match(SysY2022EParser.RP);
			this.state = 217;
			this.block();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public funcType(): FuncTypeContext {
		let localctx: FuncTypeContext = new FuncTypeContext(this, this._ctx, this.state);
		this.enterRule(localctx, 24, SysY2022EParser.RULE_funcType);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 219;
			_la = this._input.LA(1);
			if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 14) !== 0))) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public funcFParams(): FuncFParamsContext {
		let localctx: FuncFParamsContext = new FuncFParamsContext(this, this._ctx, this.state);
		this.enterRule(localctx, 26, SysY2022EParser.RULE_funcFParams);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 221;
			this.funcFParam();
			this.state = 226;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===19) {
				{
				{
				this.state = 222;
				this.match(SysY2022EParser.COMMA);
				this.state = 223;
				this.funcFParam();
				}
				}
				this.state = 228;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public funcFParam(): FuncFParamContext {
		let localctx: FuncFParamContext = new FuncFParamContext(this, this._ctx, this.state);
		this.enterRule(localctx, 28, SysY2022EParser.RULE_funcFParam);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 229;
			this.bType();
			this.state = 230;
			this.match(SysY2022EParser.ID);
			this.state = 242;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===15) {
				{
				this.state = 231;
				this.match(SysY2022EParser.LB);
				this.state = 232;
				this.match(SysY2022EParser.RB);
				this.state = 239;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===15) {
					{
					{
					this.state = 233;
					this.match(SysY2022EParser.LB);
					this.state = 234;
					this.constExp();
					this.state = 235;
					this.match(SysY2022EParser.RB);
					}
					}
					this.state = 241;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
			}
